--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,38 @@ commands =
     flake8 {toxinidir}/tests/
     {toxinidir}/tests/test_basic.py
 
+[testenv:eoan]
+# Just run basic_test.sh, with multipass support, on eoan.
+# TODO: refactor so that there isn't so much copypasta here and below.
+deps = -r{toxinidir}/test-requirements.txt
+setenv =
+    MULTIPASS=true
+    DISTRO=eoan
+
+commands =
+    {toxinidir}/tools/basic_setup.sh
+    flake8 {toxinidir}/tests/
+    {toxinidir}/tests/test_basic.py
+
+[testenv:disco]
+# Just run basic_test.sh, with multipass support, on disco.
+deps = -r{toxinidir}/test-requirements.txt
+setenv =
+    MULTIPASS=true
+    DISTRO=disco
+
+[testenv:xenial]
+# Just run basic_test.sh, with multipass support, on xenial.
+deps = -r{toxinidir}/test-requirements.txt
+setenv =
+    MULTIPASS=true
+    DISTRO=xenial
+
+commands =
+    {toxinidir}/tools/basic_setup.sh
+    flake8 {toxinidir}/tests/
+    {toxinidir}/tests/test_basic.py
+
 [testenv:cluster]
 # Test out clustering!
 # Requires multipass.
