Delay creating external bridge until we are initializing
Previously, the snap set up a bridge using the default 10.20.20.0/24
network upon install. If there was a good reason not to use this
network (e.g., it already exists and is being used for another
purpose), MicroStack, and the host machine, could wind up in a broken
state.

This PR delays setting up the bridge until after we have given an
operator a chance to override the default settings.

This has been manually tested. To test, do the following:

1) Checkout the code, and run tox -e build
2) Run tools/make-a-microstack.sh
3) snapctl set config.network.ext-cidr and config.network.ext-gateway
4) Run microstack_init
5) Exit the snap shell and run microstack.launch

Change-Id: I9e268495f313b29d9781d80a2468fc0a1a450aa0
Closes-Bug: https://bugs.launchpad.net/microstack/+bug/1851521

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -209,7 +209,7 @@ apps:
 #      - network
 
   external-bridge:
-    command: bin/setup-br-ex
+    command: wait-on-init setup-br-ex
     daemon: oneshot
     passthrough:
       after: [ovs-vswitchd]
@@ -418,6 +418,12 @@ parts:
       - openstack-projects
     organize:
       openstack-wrapper: bin/openstack-wrapper
+
+  init-wrapper:
+    source: ./snap-wrappers/init
+    plugin: dump
+    organize:
+      wait-on-init: bin/wait-on-init
 
   nova-config:
     after: [openstack-projects]
