Added refresh tests
Refactored test framework so that we have more flexibility in terms of
installing various versions of microstack before and after running
some tests. Moved in class "globals" into per instance variables,
to avoid broken cases with incomplete cleanup.

Added test_refresh.py, plus matching env in tox.

Refresh tests will fail currently, because we have some pending issues
that break refreshes. Fixing those is a subject for a different
commit.

Refactored cluster_test.py and control_test.py to use new framework.
Should (and do) pass.

Framework now cleans up multipass hosts regardless of whether or not
the tests passed. Leaning on the .tar.gz for local troubleshooting
helps us make it better for in gate troubleshooting.

Change-Id: I6a45b39132f5959c2944fe1ebbe10f71408ee777

--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,16 @@ commands =
 setenv =
     MULTIPASS=true
 
+[testenv:refresh]
+# Verify that we can refresh MicroStack
+setenv =
+    MULTIPASS=true
+
+commands =
+    {toxinidir}/tools/basic_setup.sh
+    flake8 {toxinidir}/tests/
+    {toxinidir}/tests/test_refresh.py
+
 [testenv:xenial]
 # Run basic tests, under xenial.
 setenv =
