Fixed dashboard_allowed_hosts config setting.
Now happens in a template, just like all the other values, which fixes
an issue where it doesn't get overridden during an upgrade.

Change-Id: Ied84ddc0282c77de6797f90efc8923ae66a9d59e

--- a/snap-overlay/snap-openstack.yaml
+++ b/snap-overlay/snap-openstack.yaml
@@ -68,6 +68,7 @@ setup:
     extgateway: 'config.network.ext-gateway'
     extcidr: 'config.network.ext-cidr'
     dns: 'config.network.dns'
+    dashboard_allowed_hosts: 'config.network.dashboard-allowed-hosts'
 entry_points:
   keystone-manage:
     binary: "{snap}/bin/keystone-manage"
