Added microstack.remove command
Running microstack.remove will remove the br-ex virtual bridge device,
then uninstall MicroStack.

We do this because we can't use ovs-ctl to remove the bridge as part
of a remove hook, as the Open vSwitch daemons are not running at that
point. The microstack.remove command gives operators a way to cleanly
uninstall the snap, without needing to reboot to get rid of br-ex.

Added test exercising the code to test_basic.py.

Rerranged entry points a bit (moved some things into main.py) to make
code sharing easier, and to prevent a proliferation of entry point
scripts in our root dir.

Change-Id: I9ff25864cd96ada3a9b3da8992c2b33955eff0b4
Closes-Bug: #1852147

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -27,6 +27,9 @@ apps:
 #    plugs:
 #      - network
 
+  remove:
+    command: microstack_remove
+
   # Keystone
   keystone-uwsgi:
     command: snap-openstack launch keystone-uwsgi
