Strict confinement related fixes
(Not complete strict confinement, but these don't break anything
devmode related, and get us closer to having strict confinement
working.)

Added more needed interfaces to snapcraft.yaml.

Created a wrapper around dnsmasq so that we can run as the snap_daemon
user. Added snap_daemon user to snapcraft.yaml.

Added a utility script for connecting interfaces that don't auto
connect (tools/connect.sh). Not useful for production, but saves a lot
of time when testing.

libvirt no longer uses unix sock group "sudo" (can't run setguid in
strict confinement).

Got rid of "find_missing_plugins" in init script. By the time we
release strict confinement to production, all those plugins will auto
connect.

Change-Id: I8324ac7bd0332c41cac17703eb15d7301e7babf3

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,6 +12,9 @@ environment:
   PATH: $SNAP/usr/sbin:$SNAP/usr/bin:$SNAP/sbin:$SNAP/bin:$PATH
   OS_PLACEMENT_CONFIG_DIR: $SNAP/etc/nova/
 
+system-usernames:
+  snap_daemon: shared
+
 layout:
   # Libvirt/Qemu libs
   /usr/lib/$SNAPCRAFT_ARCH_TRIPLET/ceph:
@@ -265,6 +268,13 @@ apps:
       - network-control
       - netlink-connector
       - netlink-audit
+      - libvirt
+      - opengl
+      - raw-usb
+      - hardware-observe
+      - kvm
+      - kernel-module-observe
+
   virtlogd:
     command: virtlogd --pid $SNAP_DATA/virtlogd.pid
     daemon: simple
@@ -365,6 +375,7 @@ apps:
     command: microstack_launch
     plugs:
       - network
+      - network-control  # could also be mount-observe
 
   # Cluster
   cluster-server:
@@ -573,6 +584,7 @@ parts:
       snapcraftctl build
     organize:
       '*' : patches/
+      'usr/sbin/dnsmasq': patches/neutron/dnsmasq
     prime:
       - -*
 
@@ -766,6 +778,8 @@ parts:
       - --firmwarepath=/snap/$SNAPCRAFT_PROJECT_NAME/current/usr/share/seabios:/snap/$SNAPCRAFT_PROJECT_NAME/current/usr/share/qemu:/snap/$SNAPCRAFT_PROJECT_NAME/current/usr/lib/ipxe/qemu
       - --disable-user
       - --disable-linux-user
+      - --disable-bsd-user
+      - --disable-vhost-user
       - --enable-system
       - --target-list=x86_64-softmmu
     override-build: |
@@ -855,7 +869,17 @@ parts:
       apt source libvirt
       # Fix issue with running apt source as root
       dpkg-source --before-build libvirt-5.0.0
+      # Prevent libvirt from attempting to run setgroups
+      echo "
+
+      #undef HAVE_SETGROUPS
+      #undef HAVE_SETEUID
+      " >> libvirt-5.0.0/config-post.h
+
+      # Build
       snapcraftctl build
+    organize:
+      'usr/sbin/dnsmasq-orig': usr/sbin/dnsmasq
 
   # MySQL
   mysql-server:
