--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -419,7 +419,7 @@ parts:
       - libvirt
       - patches
     constraints:
-      - https://raw.githubusercontent.com/openstack/requirements/stable/stein/upper-constraints.txt
+      - ${SNAPCRAFT_STAGE}/patches/upper-constraints.txt
     source: http://tarballs.openstack.org/keystone/keystone-stable-stein.tar.gz
     python-packages:
       - libvirt-python
@@ -561,6 +561,16 @@ parts:
       - uca-sources
     source: patches/
     plugin: dump
+    override-build: |
+      # Create ${SNAPCRAFT_STAGE}/patches/upper-constraints
+
+      # Fetch upstream file
+      curl https://raw.githubusercontent.com/openstack/requirements/stable/stein/upper-constraints.txt --output ./upper-constraints.txt
+
+      # Fix https://bugs.launchpad.net/microstack/+bug/1867360
+      sed -e 's/pyScss===1.3.4/git+https:\/\/github.com\/petevg\/pyScss.git#egg=pyScss/' -i ./upper-constraints.txt
+
+      snapcraftctl build
     organize:
       '*' : patches/
     prime:
@@ -928,7 +938,7 @@ parts:
     requirements:
       - requirements.txt
     constraints:
-      - https://raw.githubusercontent.com/openstack/requirements/stable/stein/upper-constraints.txt
+      - ${SNAPCRAFT_STAGE}/patches/upper-constraints.txt
     source: tools/cluster
     override-build: |
       # Hack to avoid conflict between openstack-projects'
