Test fixes and tweaks
Fixed issue where tests/framework.py was ignorning DISTRO env
variable.

Added SNAP_FILE env variable, which allows tests to be run on an
abitrary .snap file. For example, one fetch with `snap download`.

Change-Id: Ie6cce841e00d6d56d0525d0a81c4faad3c54e8e8

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ install_command = pip install {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
 setenv =
     PATH = /snap/bin:{env:PATH}
-passenv = HOME TERM DISTRO INTERACTIVE_DEBUG USER
+passenv = HOME TERM DISTRO INTERACTIVE_DEBUG USER SNAP_FILE
 whitelist_externals =
     sudo
     /snap/bin/snapcraft
