--- a/snap-overlay/etc/neutron/plugins/ml2/ml2_conf.ini
+++ b/snap-overlay/etc/neutron/plugins/ml2/ml2_conf.ini
@@ -1,13 +1,18 @@
 [ml2]
-mechanism_drivers = openvswitch
-extension_drivers = port_security,trunk,qos
-tenant_network_types = geneve,gre,vxlan
+mechanism_drivers = ovn
+extension_drivers = port_security,qos
+tenant_network_types = geneve
+overlay_ip_version = 4
+external_network_type = flat
 
 [ml2_type_geneve]
 vni_ranges = 1:65535
+max_header_size = 40
 
-[ml2_type_gre]
-tunnel_id_ranges = 1:65535
+[ml2_type_flat]
+flat_networks = *
 
-[ml2_type_vxlan]
-vni_ranges = 1:65535
+[ovn]
+# TODO(dmitriis): replace the common path with a template.
+ovn_nb_connection = unix:/var/snap/microstack/common/run/ovn/ovnnb_db.sock
+ovn_sb_connection = unix:/var/snap/microstack/common/run/ovn/ovnsb_db.sock
