--- a/tools/init/requirements.txt
+++ b/tools/init/requirements.txt
@@ -1,4 +1,5 @@
-netaddr
+# netaddr is pinned to match the upper-constraints.txt file of Ussuri
+netaddr===0.7.19
 netifaces
-pymysql
+pymysql==0.9.3
 wget
