Adds genisoimage for cloud-init
Userdata is not able to be generated as a config drive
due to missing package in snap.

Change snap build to explicitly install LXD as confined
snap.

Change-Id: If03923a7a8223a9eec4e49bd612d39b231e788fb
Closes-Bug: 1884320
Signed-off-by: beierlm <mark.beierl@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -572,6 +572,8 @@ parts:
       - uca-sources
     source: patches/
     plugin: dump
+    build-packages:
+      - curl
     override-build: |
       # Create ${SNAPCRAFT_STAGE}/patches/upper-constraints
 
@@ -830,6 +832,7 @@ parts:
     - dmidecode
     - dnsmasq
     - iptables
+    - genisoimage
     - libxml2
     - libyajl2
     - try: [libnuma1]
