Use $SNAPCRAFT_PROJECT_DIR instead of relpaths
Launchpad builds are failing due to the use of relative paths to the
project directory from the current directory. Example:
https://launchpadlibrarian.net/487726073/buildlog_snap_ubuntu_bionic_amd64_microstack_BUILDING.txt.gz

SNAPCRAFT_PROJECT_DIR can be used instead.

Change-Id: I17d0876236a8f9d56c9fd5972e5ade9388119584

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1007,8 +1007,8 @@ parts:
     plugin: nil
     source: ""
     override-build: |
-      cat ../../../project/filebeat.pgp.key | apt-key add -
-      cat ../../../project/telegraf.pgp.key | apt-key add -
+      cat $SNAPCRAFT_PROJECT_DIR/filebeat.pgp.key | apt-key add -
+      cat $SNAPCRAFT_PROJECT_DIR/telegraf.pgp.key | apt-key add -
       apt-get install apt-transport-https
       echo 'deb https://artifacts.elastic.co/packages/5.x/apt stable main' > /etc/apt/sources.list.d/elastic-5.x.list
       echo 'deb http://ppa.launchpad.net/telegraf-devs/ppa/ubuntu bionic main' > /etc/apt/sources.list.d/telegraf.x.list
